--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node ./build/index.js",
     "build": "npm run clean && babel src -d build",
-    "dev": "nodemon --exec babel-node src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node src/index.js",
     "migrate": "npx knex migrate:latest --knexfile src/db/knexfile.js",
     "clean": "rm -rf build && mkdir build"
   },
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
