--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^16.0.1",
+    "graphql-date": "^1.0.3",
     "graphql-tools": "^8.2.0",
     "graphql-upload": "^12.0.0",
     "knex": "^0.95.14",
