--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.2",
     "graphql": "^16.0.1",
     "graphql-date": "^1.0.3",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^8.2.0",
     "graphql-upload": "^12.0.0",
     "knex": "^0.95.14",
@@ -42,6 +43,8 @@
     "nodemailer-mailgun-transport": "^2.1.3",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
+    "socket.io": "^4.4.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "uuid": "^8.3.2"
   }
 }
